# google-drive-sync

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: auto-bump.yml  publish.yml  release.yml  test.yml  wiki.yml
Formula/: gdsync.rb
gdsync/: cli.py  core.py
scripts/: bump.py  fix.sh  fix_md_breaks.py  format_md.py  lint.py
tests/: test_cli.py  test_core.py
wiki/: CLI-Reference.md  Configuration.md  Development.md  Google-Cloud-Setup.md  Home.md  Troubleshooting.md
